empezando front - end

--- a/front-end/src/app/home/home.page.html
+++ b/front-end/src/app/home/home.page.html
@@ -1,5 +1,5 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<ion-header style="background-color: blue;">
+  <ion-toolbar >
     <ion-title>
       Blank
     </ion-title>
@@ -13,7 +13,7 @@
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
+  <div class="ion-col">
     <strong>Ready to create an app?</strong>
     <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
   </div>
