--- a/front-end/src/app/layouts/usuario-layout/usuario-layout.component.html
+++ b/front-end/src/app/layouts/usuario-layout/usuario-layout.component.html
@@ -1,15 +1,20 @@
+<p>
+  usuario-layout works!
+</p>
+<router-outlet></router-outlet>
 <ion-tabs>
   <ion-tab-bar slot="bottom">
       <ion-tab-button tab="principal">
           <ion-icon name="home"></ion-icon>
       </ion-tab-button>
 
+      <ion-tab-button tab="asignaturas">
+          <ion-icon name="book"></ion-icon>
+      </ion-tab-button>
+
       <ion-tab-button tab="perfil">
           <ion-icon name="person"></ion-icon>
       </ion-tab-button>
-
-      <ion-tab-button tab="biblioteca">
-          <ion-icon name="book"></ion-icon>
-      </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
+
