--- a/frontend/src/app/pages/admin/grupo/grupo.component.html
+++ b/frontend/src/app/pages/admin/grupo/grupo.component.html
@@ -82,7 +82,7 @@
         <!--     Alta de alumnos en le grupo     -->
         <div id="matricular-alumnos">
             <h5>Añadir alumnos al grupo</h5>
-            <app-selectusers [rol]="'ROL_ALUMNO'" [selected]="alumnos" (nuevaLista)="guardarLista($event)"></app-selectusers>
+            <app-selectusers [rol]="'ROL_USUARIO'" [selected]="alumnos" (nuevaLista)="guardarLista($event)"></app-selectusers>
         </div>
     </div>
 </div>
