--- a/frontend/src/app/pages/admin/asignatura/asignatura.component.html
+++ b/frontend/src/app/pages/admin/asignatura/asignatura.component.html
@@ -85,7 +85,7 @@
         <!--     Matricular alumnos     -->
         <div id="matricular-alumnos" *ngIf="tab===2">
 
-            <app-selectusers [rol]="'ROL_ALUMNO'" [selected]="alumnos" (nuevaLista)="guardarLista($event,'alumnos')"></app-selectusers>
+            <app-selectusers [rol]="'ROL_USUARIO'" [selected]="alumnos" (nuevaLista)="guardarLista($event,'alumnos')"></app-selectusers>
         </div>
     </div>
 </div>
