--- a/frontend/src/app/pages/admin/enfermedades/enfermedades.component.html
+++ b/frontend/src/app/pages/admin/enfermedades/enfermedades.component.html
@@ -47,6 +47,8 @@
                                 <td [routerLink]="['/admin/enfermedades/enfermedad', enfermedad.uid]" class="micursor">{{enfermedad.nombre}}</td>
                                 <td [routerLink]="['/admin/enfermedades/enfermedad', enfermedad.uid]" class="micursor">{{enfermedad.descripcion}}</td>
                                 <td [routerLink]="['/admin/enfermedades/enfermedad', enfermedad.uid]" class="micursor">{{enfermedad.tratamiento}}</td>
+                                <td [routerLink]="['/admin/enfermedades/enfermedad', enfermedad.uid]" class="micursor">{{enfermedad.sintomas}}</td>
+
                                 <td class="text-center">
                                     <i class="fa fa-pencil-alt text-success fa-lg mr-5 micursor" [routerLink]="['/admin/enfermedades/enfermedad', enfermedad.uid]"></i>
                                     <i class="fa fa-trash text-danger fa-lg micursor" (click)="eliminarEnfermedades(enfermedad.uid, enfermedad.nombre)"></i></td>
