--- a/frontend/src/app/pages/admin/centros/centros.component.html
+++ b/frontend/src/app/pages/admin/centros/centros.component.html
@@ -1,1 +1,65 @@
-<p>centros works!</p>
+<div class="row animate__animated animate__fadeIn animate__faster">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                <div class="col">
+                    <div class="row justify-content-end">
+                        <div class="float-right">
+                            <button class="btn btn-primary" routerLink="/admin/centros/centro/nuevo">Nuevo<i class="fa fa-plus m-l-10"></i></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col m-t-10">
+                    <div class="row justify-content-between">
+                        <div class="col-sm-4">
+                            <div class="input-group">
+                                <input #txtBuscar type="text" class="form-control " (keyup)="cargarCentros(txtBuscar.value)" id="fname" placeholder="Buscar">
+                                <div class="input-group-append">
+                                    <span class="input-group-text micursor" (click)="txtBuscar.value ='';cargarCentros(txtBuscar.value)"><i class="fa fa-times-circle"></i></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="float-right">
+                                <app-pagination (cambiarPagina)="cambiarPagina( $event )" [totalRegistros]="totalregistros" [registroActual]="registroactual+1" [registrosPorPagina]="registrosporpagina"></app-pagination>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="alert alert-primary text-center" *ngIf="loading">
+                    <h4 class="alert-heading">Cargando!</h4>
+                    <i class="fa fa-spin fa-spinner fa-3x"></i>
+                    <p>Por favor, espere</p>
+                </div>
+                <div class="table-responsive">
+                    <table id="tabla_usuarios" class="table table-striped table-bordered">
+                        <thead>
+                            <tr>
+                                <th>Nombre</th>
+                                <th>Especialidad</th>
+                                <th>Ubicación</th>
+                                <th>Enfermedades</th>
+                                <th class="text-center">Acción</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let centro of listaRegistros">
+                                <td [routerLink]="['/admin/centros/centro', centro.uid]" class="micursor">{{centro.nombre}}</td>
+                                <td [routerLink]="['/admin/centros/centro', centro.uid]" class="micursor">{{centro.especialidad}}</td>
+                                <td [routerLink]="['/admin/centros/centro', centro.uid]" class="micursor">{{centro.ubicacion}}</td>
+                                <td [routerLink]="['/admin/centros/centro', centro.uid]" class="micursor">{{centro.enfermedades}}</td>
+
+                                <td class="text-center">
+                                    <i class="fa fa-pencil-alt text-success fa-lg mr-5 micursor" [routerLink]="['/admin/centros/centro', centro.uid]"></i>
+                                    <i class="fa fa-trash text-danger fa-lg micursor" (click)="eliminarCentros(centro.uid, centro.nombre)"></i></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class=" mt-2 mr-2 float-right ">
+                    <app-pagination (cambiarPagina)="cambiarPagina( $event ) " [texto]="true " [totalRegistros]="totalregistros " [registroActual]="registroactual+1 " [registrosPorPagina]="registrosporpagina "></app-pagination>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
