--- a/frontend/src/app/pages/admin/centro/centro.component.html
+++ b/frontend/src/app/pages/admin/centro/centro.component.html
@@ -54,7 +54,13 @@
                         <div class="col-lg-3 col-md-12 text-lg-right">
                             <span class="">Enfermedades</span>
                         </div>
-
+                        <div class="col-lg-8 col-md-12">
+                            <select class="form-control" [ngClass]="{'is-invalid' : campoNoValido('enfermedades')}" formControlName="enfermedades" multiple="multiple">
+                                <option *ngFor="let enfermedad of enfermedades" value="{{enfermedad.uid}}">
+                                    {{enfermedad.nombre}}
+                                </option>
+                            </select>
+                        </div>
                     </div>
                     <div class="d-flex justify-content-center m-t-10 ">
                         <div class="align-content-center ">
