--- a/frontend/src/app/pages/perfil/perfil.component.html
+++ b/frontend/src/app/pages/perfil/perfil.component.html
@@ -60,7 +60,7 @@
     <div class="d-flex justify-content-center">
         <div class="card col-md-10">
             <div class="card-body">
-                <h5 class="card-title">Cambio de centraseña</h5>
+                <h5 class="card-title">Cambio de contraseña</h5>
                 <div class="text-success text-right animate__animated animate__faster" [ngClass]="{'animate__fadeIn': showOKP && this.datosPassword.pristine, 'animate__fadeOut' : !(showOKP && this.datosPassword.pristine)}">Contraseña actualizada</div>
                 <form class="form-horizontal m-t-20" [formGroup]="datosPassword" (ngSubmit)="cambiarPassword()">
                     <div class="row m-t-10">
