--- a/frontend/src/app/pages/usuario/mainpage/mainpage.component.html
+++ b/frontend/src/app/pages/usuario/mainpage/mainpage.component.html
@@ -16,22 +16,48 @@
                     </div>
                 </div>
             </div>
-          <div class="col-12">
-            <div class="form-group">
-                <div class="p-t-20">
-                    <button class="btn btn-info volver-login" id="to-recover" type="submit"><i class="fa fa-search"></i>  Buscar</button>
-                </div>
-            </div>
-        </div>
-    </form>
-
-            <div class="col-12">
-                <div class="form-group">
-                    <div class="p-t-20">
-                        <h1>{{mostrarPosiblesEnfermedades()}}</h1>
+            <div class="row">
+                <div class="col-12">
+                    <div class="form-group">
+                        <div class="p-t-20">
+                            <button class="btn btn-info volver-login" id="to-recover" type="submit"><i class="fa fa-search"></i>  Buscar</button>
+                        </div>
                     </div>
                 </div>
             </div>
+         </form>
         </div>
-      </div>
+    </div>
 </div>
+
+<div class="row d-flex justify-content-center" *ngIf="comprobarEnfermedades()===true">
+    <div class="card mb-12 border-0">
+        <h5 class="card-title" style="color: #5da0a2;">Lista de posibles enfermedades relacionadas con tu síntoma principal</h5>
+            <div class="table-responsive">
+                <table id="" class="table table-striped table-bordered">
+                    <thead>
+                        <tr style="background-color:#5da0a2; color:white;">
+                            <th>Enfermedad</th>
+                            <th>Sintomas</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let enfermedad of listaenfermedadesposibles">
+                            <td class="micursor" style="font-weight: bold;">{{enfermedad.nombre}}</td>
+                            <td [routerLink]="" class="micursor">{{mostrarSintomas(enfermedad.sintomas)}}</td>
+                            <button class="btn btn-success" style="background-color: #5da0a2; color:white;"  id="to-recover" type="submit"><i class="fa fa-plus"></i>  Info</button>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+    </div>
+</div>
+
+<div class="row d-flex justify-content-center" *ngIf="comprobarEnfermedades()===false && this.buscado===true">
+    <div class="card mb-12 border-0">
+        <h3 style="color: red;">No hay ninguna enfermedad relacionado con tu síntoma. Prueba otro</h3>
+    </div>
+</div>
+
+
+
