--- a/frontend/src/app/pages/usuario/info-enfermedad/info-enfermedad.component.html
+++ b/frontend/src/app/pages/usuario/info-enfermedad/info-enfermedad.component.html
@@ -1,1 +1,20 @@
 <p>info-enfermedad works!</p>
+
+<table id="tabla_usuarios" class="table table-striped table-bordered">
+    <thead>
+        <tr>
+            <th>Nombre</th>
+            <th>Descripcion</th>
+            <th class="text-center">Acción</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let enfermedad of enfermedad">
+            <td [routerLink]="['/admin/sintomas/sintoma', sintoma.uid]" class="micursor">{{enfermedad.nombre}}</td>
+            <td [routerLink]="['/admin/sintomas/sintoma', sintoma.uid]" class="micursor">{{enfermedad.descripcion}}</td>
+            <td class="text-center">
+                <i class="fa fa-pencil-alt text-success fa-lg mr-5 micursor" [routerLink]="['/admin/sintomas/sintoma', sintoma.uid]"></i>
+                <i class="fa fa-trash text-danger fa-lg micursor" (click)="eliminarSintoma(sintoma.uid, sintoma.nombre)"></i></td>
+        </tr>
+    </tbody>
+</table>
