--- a/frontend/src/app/pages/usuario/mainpage/mainpage.component.html
+++ b/frontend/src/app/pages/usuario/mainpage/mainpage.component.html
@@ -45,7 +45,7 @@
                         <tr *ngFor="let enfermedad of listaenfermedadesposibles">
                             <td class="micursor" style="font-weight: bold;">{{enfermedad.nombre}}</td>
                             <td [routerLink]="" class="micursor">{{mostrarSintomas(enfermedad.sintomas)}}</td>
-                            <button class="btn btn-success" style="background-color: #5da0a2; color:white;"  id="to-recover" type="submit"><i class="fa fa-plus"></i>  Info</button>
+                            <td><button class="btn btn-success" [routerLink]="['/info_enfermedad', enfermedad.uid]"><i class="fa fa-plus"></i>   Info</button></td>
                         </tr>
                     </tbody>
                 </table>
