--- a/frontend/src/app/pages/perfil/perfil.component.html
+++ b/frontend/src/app/pages/perfil/perfil.component.html
@@ -5,9 +5,6 @@
                 <h5 class="card-title">Datos del perfil</h5>
                 <!--                 <div class="text-success text-right animate__animated animate__faster" [ngClass]="{'animate__fadeIn': showOKD && datosForm.pristine, 'animate__fadeOut' : !(showOKD && datosForm.pristine)}">Datos actualizados</div>
  -->
-                <div class="text-center" style="widht: 200px;">
-                    <img [src]="imagenUrl" class="img-thumbnail rounded-circle" width="200">
-                </div>
                 <div class="">
                     <form class="form-horizontal m-t-20" [formGroup]="datosForm" (ngSubmit)="enviar()">
                         <div class="row m-t-10">
@@ -26,23 +23,32 @@
                                 <span class=" ">Email</span>
                             </div>
                             <div class="col-lg-8 col-md-12 ">
-                                <input type="text " class="form-control " formControlName="email" [ngClass]="{ 'is-invalid' : campoNoValido( 'email')} " id="email ">
+                                <input type="text " class="form-control " formControlName="email" [ngClass]="{ 'is-invalid' : campoNoValido( 'email')} " id="email">
                                 <div class="invalid-feedback ">
                                     El campo es obligatorio
                                 </div>
                             </div>
                         </div>
-                        <div class="form-group row m-t-10">
+                        <div class=" row m-t-10 ">
                             <div class="col-lg-3 text-lg-right">
-                                <span class=" ">Imagen</span>
+                                <span class=" ">Edad</span>
                             </div>
-                            <div class="col-lg-8 col-md-12">
-                                <div class="custom-file">
-                                    <input type="file" class="custom-file-input" formControlName="imagen" id="fotoperfil" (change)="cambioImagen( $event )">
-                                    <label class="custom-file-label" for="fotoperfil" data-browse="Elegir">{{fileText}}</label>
-
+                            <div class="col-lg-8 col-md-12 ">
+                                <input type="text " class="form-control " formControlName="edad" [ngClass]="{ 'is-invalid' : campoNoValido( 'edad')} " id="edad">
+                                <div class="invalid-feedback ">
+                                    El campo es obligatorio
                                 </div>
-
+                            </div>
+                        </div>
+                        <div class=" row m-t-10 ">
+                            <div class="col-lg-3 text-lg-right">
+                                <span class=" ">Ubicación</span>
+                            </div>
+                            <div class="col-lg-8 col-md-12 ">
+                                <input type="text " class="form-control " formControlName="ubicacion" [ngClass]="{ 'is-invalid' : campoNoValido( 'ubicacion')} " id="ubicacion">
+                                <div class="invalid-feedback ">
+                                    El campo es obligatorio
+                                </div>
                             </div>
                         </div>
                         <div class="d-flex justify-content-center m-t-10 ">
