--- a/frontend/src/app/commons/navbaruser/navbaruser.component.html
+++ b/frontend/src/app/commons/navbaruser/navbaruser.component.html
@@ -48,10 +48,10 @@
             <!-- ============================================================== -->
             <!-- toggle and nav items -->
             <!-- ============================================================== -->
-            <ul class="navbar-nav float-left mr-auto">
+            <!-- <ul class="navbar-nav float-left mr-auto">
                 <li class="nav-item d-none d-md-block"><a class="nav-link sidebartoggler waves-effect waves-light" href="javascript:void(0)" data-sidebartype="mini-sidebar"><i class="fa fa-bars font-24"></i></a></li>
 
-                <!-- <li class="nav-item dropdown">
+                <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <span class="d-none d-md-block">Create New <i class="fa fa-angle-down"></i></span>
                         <span class="d-block d-md-none"><i class="fa fa-plus"></i></span>
@@ -62,9 +62,9 @@
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Curso inactivo 1</a>
                     </div>
-                </li> -->
+                </li> 
 
-            </ul>
+            </ul> -->
 
             <ul class="navbar-nav float-right">
 
@@ -85,15 +85,23 @@
                 <!-- ============================================================== -->
                 <!-- User profile -->
                 <!-- ============================================================== -->
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark pro-pic" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <p style="color: white;">Mi perfil</p></a>
-                    <div class="dropdown-menu dropdown-menu-right user-dd animated">
-                        <a class="dropdown-item" routerLink="/perfil"><i class="fa fa-address-card m-r-5 m-l-5"></i> Mi Perfil</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item micursor" (click)="logout()"><i class="fa fa-power-off m-r-5 m-l-5"></i> Logout</a>
-                    </div>
-                </li>
+                    <a class="nav-item justify-content-center" routerLink="/usuario/perfil">
+                        <p class="nav-link" style="color: white;">Mi perfil</p>
+                    </a>
+
+                    <a class="nav-item justify-content-center" routerLink="/perfil">
+                        <p class="nav-link" style="color: white;">Biblioteca de síntomas</p>
+                    </a>
+
+                    <a class="nav-item justify-content-center" routerLink="/perfil">
+                        <p class="nav-link" style="color: white;">Biblioteca de enfermedades</p>
+                    </a>
+
+                    <a class="nav-item justify-content-center" routerLink="/perfil">
+                        <p class="nav-link" style="color: white;">Biblioteca de centros</p>
+                    </a>
+
+                    
                 <!-- ============================================================== -->
                 <!-- User profile and search -->
                 <!-- ============================================================== -->
