--- a/frontend/src/app/layouts/usuario-layout/usuario-layout.component.html
+++ b/frontend/src/app/layouts/usuario-layout/usuario-layout.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<app-navbaruser></app-navbaruser>
 <div class="auth-wrapper d-flex no-block justify-content-center align-items-center">
         <router-outlet></router-outlet>
 </div>
