--- a/frontend/src/app/pages/perfil/perfil.component.html
+++ b/frontend/src/app/pages/perfil/perfil.component.html
@@ -116,3 +116,7 @@
         </div>
     </div>
 </div>
+
+<div class="row justify-content-center">
+    <button class="btn btn-danger " (click)="logout()" type="button" id="cancelarpw">Cerrar sesión</button>
+</div>
