--- a/frontend/src/app/commons/sidebar/sidebar.component.html
+++ b/frontend/src/app/commons/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
     <!-- Sidebar scroll-->
     <div class="scroll-sidebar">
         <!-- Sidebar navigation-->
-        <nav class="sidebar-nav">
+        <nav style="margin-top: 2rem;" class="sidebar-nav">
             <ul id="sidebarnav" class="p-t-31">
 
 
