--- a/frontend/src/app/pages/usuario/info-sintoma/info-sintoma.component.html
+++ b/frontend/src/app/pages/usuario/info-sintoma/info-sintoma.component.html
@@ -1,1 +1,16 @@
-<p>info-sintoma works!</p>
+
+<div class="row justify-content-center" style="margin-top: -15rem">
+    <div class="col-8 justify-content-center">
+        <div style="border-radius: 1rem; display: flex;"class="card">
+            <h1 style="background-color: #5da0a2; color: white;"class="card-header">{{this.sintoma.nombre}}</h1>
+            <div class="card-body" style="margin: 1rem;">
+                <div style="border-bottom: solid; border-width: 0.1rem; border-color: #93af56;"class="cuadro">
+                    <h5 class="card-title verde">Descripcion</h5>
+                    <p style="margin-bottom: 1rem;"class="text-center p-t-20 p-b-20 justify-content-center">{{this.sintoma.descripcion}}</p>
+                </div>
+            </div>
+        </div>
+    </div>   
+</div>
+
+
