--- a/frontend/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/frontend/src/app/pages/admin/dashboard/dashboard.component.html
@@ -1,7 +1,6 @@
 <div class="row animate__animated animate__fadeIn animate__faster">
     <div class="col-12">
-        <p class="bienvenida-admin m-t-20">¡Bienvenido/a al panel de administración de Moony!</p>
-
+        <p class="bienvenida-admin m-t-20">¡Bienvenido/a al panel de administración de FindMED!</p>
         <br><br><br>
     </div>
 </div>
