--- a/frontend/src/app/pages/usuario/mainpage/mainpage.component.html
+++ b/frontend/src/app/pages/usuario/mainpage/mainpage.component.html
@@ -1,4 +1,4 @@
-<div class="row" style="margin-top: -5rem;">
+<div class="row">
     <h1 style="color: #5da0a2;">Encuentre la causa de sus síntomas con un par de clicks</h1>
 </div>
 <div class="row" style="padding-top: 7rem;">
