--- a/frontend/src/app/commons/navbaruser/navbaruser.component.html
+++ b/frontend/src/app/commons/navbaruser/navbaruser.component.html
@@ -89,15 +89,15 @@
                         <p class="nav-link" style="color: white;">Mi perfil</p>
                     </a>
 
-                    <a class="nav-item justify-content-center" routerLink="/perfil">
+                    <a class="nav-item justify-content-center" routerLink="/usuario/biblio-sintomas">
                         <p class="nav-link" style="color: white;">Biblioteca de síntomas</p>
                     </a>
 
-                    <a class="nav-item justify-content-center" routerLink="/perfil">
+                    <a class="nav-item justify-content-center" routerLink="/usuario/biblio-enfermedades">
                         <p class="nav-link" style="color: white;">Biblioteca de enfermedades</p>
                     </a>
 
-                    <a class="nav-item justify-content-center" routerLink="/perfil">
+                    <a class="nav-item justify-content-center" routerLink="/usuario/biblio-centros">
                         <p class="nav-link" style="color: white;">Biblioteca de centros</p>
                     </a>
 
