--- a/frontend/src/app/pages/usuario/info-centro/info-centro.component.html
+++ b/frontend/src/app/pages/usuario/info-centro/info-centro.component.html
@@ -1,4 +1,4 @@
-<div class="row justify-content-center" style="margin-top: -15rem">
+<div class="row justify-content-center">
     <div class="col-8 justify-content-center">
 <div style="border-radius: 1rem;"class="card">
     <h1 style="background-color: #5da0a2; color: white;"class="card-header">{{this.centro.nombre}}</h1>
@@ -8,7 +8,11 @@
             <p style="margin-bottom: 1rem;"class="text-center p-t-20 p-b-20 justify-content-center">{{this.centro.especialidad}}</p>
         </div>
         <div style="border-bottom: solid; border-width: 0.1rem; border-color: #93af56;"class="cuadro">
-            <h5 class="card-title verde">Tratamiento</h5>
+            <h5 class="card-title verde">Especialidad</h5>
+            <p style="margin-bottom: 1rem;"class="text-center p-t-20 p-b-20 justify-content-center">{{this.centro.especialidad}}</p>
+        </div>
+        <div style="border-bottom: solid; border-width: 0.1rem; border-color: #93af56;"class="cuadro">
+            <h5 class="card-title verde">Ubicación</h5>
             <p style="margin-bottom: 1rem;"class="text-center p-t-20 p-b-20 justify-content-center">{{this.centro.ubicacion}}</p>
         </div>
         <div style="border-bottom: solid; border-width: 0.1rem; border-color: #93af56;"class="cuadro">
