--- a/frontend/src/app/pages/usuario/biblio-enfermedades/biblio-enfermedades.component.html
+++ b/frontend/src/app/pages/usuario/biblio-enfermedades/biblio-enfermedades.component.html
@@ -6,7 +6,7 @@
     <div class="row" style="padding-top: 7rem;">
         <div class="card mb-4 border-0" style="margin:auto; width: 15rem; ">
             <div class="card-body">
-              <h5 style="color: #93af56;"class="card-title">Busque en una biblioteca de más de 100 síntomas</h5>
+              <h5 style="color: #93af56;"class="card-title">Busque en una biblioteca de más de 50 enfermedades</h5>
               <form class="form-horizontal m-t-20" id="busquedaForm" [formGroup]="enfermedadForm" (ngSubmit)="buscar()">
                 <div class="row justify-content-center">
                     <div class="col-md-12">
