--- a/frontend/src/app/pages/usuario/biblio-centros/biblio-centros.component.html
+++ b/frontend/src/app/pages/usuario/biblio-centros/biblio-centros.component.html
@@ -1,20 +1,18 @@
-
-<div class="container" style="margin-top: -25rem">
-    <div class="row" >
+    <div class="row justify-content-center" style="margin-top: -10rem;">
         <h1 style="color: #5da0a2;">Biblioteca de centros</h1>
     </div>
     <div class="row" style="padding-top: 7rem;">
         <div class="card mb-4 border-0" style="margin:auto; width: 15rem; ">
             <div class="card-body">
-              <h5 style="color: #93af56;"class="card-title">Busque en una biblioteca de más de 50 centros</h5>
-              <form class="form-horizontal m-t-20" id="busquedaForm" [formGroup]="centroForm" (ngSubmit)="buscar()">
+              <h5 style="color: #93af56;"class="card-title">Busque en una biblioteca de más de 50 centros cerca de tí</h5>
+              <form class="form-horizontal m-t-20" id="busquedaForm" [formGroup]="centroForm" (ngSubmit)="buscarProvinciaIgual()">
                 <div class="row justify-content-center">
                     <div class="col-md-12">
                         <div class="input-group mb-3 justify-content-center">
                             <mat-form-field appearance="fill">
-                                <mat-label>Escoja un centro</mat-label>
-                                <mat-select formControlName="centros">
-                                  <mat-option *ngFor="let centro of centros" value="{{centro.uid}}">{{centro.nombre}}</mat-option>
+                                <mat-label>Escoja una provincia</mat-label>
+                                <mat-select formControlName="provincias">
+                                  <mat-option *ngFor="let provincia of provincias" value="{{provincia}}">{{provincia}}</mat-option>
                                 </mat-select>
                               </mat-form-field>
                         </div>
@@ -33,4 +31,32 @@
             </div>
         </div>
     </div>
-</div>
+
+    <div class="row d-flex justify-content-center" *ngIf="comprobarCentros()===true">
+        <div class="card mb-12 border-0">
+            <h5 class="card-title" style="color: #5da0a2;">Lista de centros cerca de tí</h5>
+                <div class="table-responsive">
+                    <table id="" class="table table-striped table-bordered">
+                        <thead>
+                            <tr style="background-color:#5da0a2; color:white;">
+                                <th>Nombre del centro</th>
+                                <th>Especialidad</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let centro of centrosFiltrados">
+                                <td class="micursor" style="font-weight: bold;">{{centro.nombre}}</td>
+                                <td [routerLink]="" class="micursor">{{centro.especialidad}}</td>
+                                <td><button class="btn btn-success btn" (click)="irAlCentro(centro.uid);"><i class="fa fa-plus"></i>   Información</button></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+        </div>
+    </div>
+    
+    <div class="row d-flex justify-content-center" *ngIf="comprobarCentros()===false && this.buscado===true">
+        <div class="card mb-12 border-0">
+            <h3 style="color: red;">No hay ningun centro cerca de tí. Prueba otra provincia</h3>
+        </div>
+    </div>
