--- a/frontend/src/app/pages/admin/centro/centro.component.html
+++ b/frontend/src/app/pages/admin/centro/centro.component.html
@@ -57,11 +57,16 @@
                             <span class="">Enfermedades</span>
                         </div>
                         <div class="col-lg-8 col-md-12">
-                            <select class="form-control" [ngClass]="{'is-invalid' : campoNoValido('enfermedades')}" formControlName="enfermedades" multiple="multiple">
-                                <option *ngFor="let enfermedad of enfermedades" value="{{enfermedad.uid}}">
-                                    {{enfermedad.nombre}}
-                                </option>
-                            </select>
+                            <ng-multiselect-dropdown
+                            [placeholder]="'Escoja las enfermedades'"
+                            [settings]="dropdownSettings"
+                            [data]="enfermedades"
+                            value="uid" 
+                            (onSelect)="onItemSelect($event)"
+                            (onSelectAll)="onSelectAll($event)"
+                            formControlName="enfermedades"
+                            >
+                            </ng-multiselect-dropdown>
                         </div>
                     </div>
                     <div class="d-flex justify-content-center m-t-10 ">
