--- a/frontend/src/app/pages/usuario/info-enfermedad/info-enfermedad.component.html
+++ b/frontend/src/app/pages/usuario/info-enfermedad/info-enfermedad.component.html
@@ -19,5 +19,14 @@
         </div>
     </div>
 </div>
+<div class="row justify-content-center">
+    <div class="col-3">
+        <div class="form-group">
+            <div class="p-t-20">
+                <button class="btn btn-info volver-login" id="to-recover" type="submit" (click)="anyadirFav()"><i class="fa fa-star"></i>  Guardar en favoritos</button>
+            </div>
+        </div>
+    </div>
+</div>
 </div>
 </div>
