--- a/frontend/src/app/commons/navbaruser/navbaruser.component.html
+++ b/frontend/src/app/commons/navbaruser/navbaruser.component.html
@@ -101,6 +101,10 @@
                         <p class="nav-link" style="color: white;">Biblioteca de centros</p>
                     </a>
 
+                    <a class="nav-item justify-content-center" routerLink="/usuario/favoritos">
+                        <p class="nav-link" style="color: white;">Favoritos</p>
+                    </a>
+
                     
                 <!-- ============================================================== -->
                 <!-- User profile and search -->
