--- a/frontend/src/app/pages/usuario/mainpage/mainpage.component.html
+++ b/frontend/src/app/pages/usuario/mainpage/mainpage.component.html
@@ -5,7 +5,7 @@
     <div class="card mb-4 border-0" style="margin:auto; width: 15rem; ">
         <div class="card-body">
           <h5 style="color: #93af56;"class="card-title">Indique su síntoma principal y se procederá a realizar la búsqueda</h5>
-          <form class="form-horizontal m-t-20" id="busquedaForm" [formGroup]="busquedaForm" (ngSubmit)="buscar()">
+          <form class="form-horizontal m-t-20" id="busquedaForm" [formGroup]="busquedaForm" (ngSubmit)="buscar2()">
             <div class="row">
                 <div class="col-md-12">
                     <div class="input-group mb-3">
