--- a/frontend/src/app/pages/usuario/info-enfermedad/info-enfermedad.component.html
+++ b/frontend/src/app/pages/usuario/info-enfermedad/info-enfermedad.component.html
@@ -22,8 +22,11 @@
 <div class="row justify-content-center">
     <div class="col-3">
         <div class="form-group">
-            <div class="p-t-20">
+            <div class="p-t-20" *ngIf="esFavorito()==false">
                 <button class="btn btn-info volver-login" id="to-recover" type="submit" (click)="anyadirFav()"><i class="fa fa-star"></i>  Guardar en favoritos</button>
+            </div>
+            <div class="p-t-20" *ngIf="esFavorito()==true">
+                <button class="btn btn-danger volver-login" id="to-recover" type="submit" (click)="quitarFav()"><i class="fa fa-star"></i>  Quitar de favoritos</button>
             </div>
         </div>
     </div>
