--- a/frontend/src/app/pages/usuario/perfil/perfil.component.html
+++ b/frontend/src/app/pages/usuario/perfil/perfil.component.html
@@ -62,6 +62,8 @@
                     </form>
                 </div>
             </div>
+
+        </div>
     </div>
     <div class="d-flex justify-content-center">
         <div class="card col-md-10">
