--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -55,7 +55,7 @@
                         <div class="form-group">
                             <div class="p-t-20">
                                 <button class="btn btn-success float-right entrar" type="submit" [disabled]="waiting"><i class="fas fa-spinner fa-spin m-r-10" *ngIf="waiting"></i>Entrar</button>
-                                <button class="btn btn-info volver-login" id="to-recover" type="button" [disabled]="waiting" routerLink="/recovery"><i class="fa fa-lock m-r-5"></i> Recuperar contraseña </button>
+                                <!-- <button class="btn btn-info volver-login" id="to-recover" type="button" [disabled]="waiting" routerLink="/recovery"><i class="fa fa-lock m-r-5"></i> Recuperar contraseña </button> -->
                             </div>
                         </div>
                     </div>
