--- a/frontend/src/app/pages/admin/usuario/usuario.component.html
+++ b/frontend/src/app/pages/admin/usuario/usuario.component.html
@@ -61,7 +61,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row m-t-10">
+                    <!-- <div class="row m-t-10">
                         <div class="col-lg-3 col-md-12 text-lg-right">
                             <span class="">Ubicación</span>
                         </div>
@@ -73,7 +73,7 @@
                                 </mat-select>
                               </mat-form-field>
                         </div>
-                    </div>
+                    </div> -->
 
                     <div class=" row m-t-10 ">
                         <div class="col-lg-3 col-md-12 text-lg-right ">
