--- a/frontend/src/app/pages/usuario/perfil/perfil.component.html
+++ b/frontend/src/app/pages/usuario/perfil/perfil.component.html
@@ -1,5 +1,7 @@
-<div class="animate__animated animate__fadeInDown animate__faster">
-    <div class="d-flex justify-content-center">
+<div class="row justify-content-center" style="margin-top: -10rem;">
+            <h1 style="color: #5da0a2;">Mi perfil</h1>
+</div>
+    <div class="d-flex justify-content-center" style="margin-top: 3rem;">
         <div class="card col-md-12">
             <div class="card-body">
                 <h5 class="card-title">Datos del perfil</h5>
@@ -40,7 +42,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class=" row m-t-10 ">
+                       <!--  <div class=" row m-t-10 ">
                             <div class="col-lg-3 text-lg-right">
                                 <span class=" ">Ubicación</span>
                             </div>
@@ -52,10 +54,10 @@
                                     </mat-select>
                                   </mat-form-field>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="d-flex justify-content-center m-t-10 ">
                             <div class="align-content-center ">
-                                <button class="btn btn-primary m-r-20 " type="submit " id="enviar" [disabled]="datosForm.pristine">Enviar</button>
+                                <button class="btn btn-primary m-r-20 " type="submit " id="enviar" [disabled]="datosForm.pristine">Modificar</button>
                                 <button class="btn btn-danger " (click)="cargarUsuario()" type="button" id="cancelar" [disabled]="datosForm.pristine">Cancelar</button>
                             </div>
                         </div>
@@ -66,7 +68,7 @@
         </div>
     </div>
     <div class="d-flex justify-content-center">
-        <div class="card col-md-10">
+        <div class="card col-md-20">
             <div class="card-body">
                 <h5 class="card-title">Cambio de contraseña</h5>
                 <div class="text-success text-right animate__animated animate__faster" [ngClass]="{'animate__fadeIn': showOKP && this.datosPassword.pristine, 'animate__fadeOut' : !(showOKP && this.datosPassword.pristine)}">Contraseña actualizada</div>
@@ -117,7 +119,6 @@
             </div>
         </div>
     </div>
-</div>
 
 <div class="row justify-content-center">
     <button class="btn btn-danger " (click)="logout()" type="button" id="cancelarpw">Cerrar sesión</button>
