--- a/frontend/src/app/pages/usuario/mainpage/mainpage.component.html
+++ b/frontend/src/app/pages/usuario/mainpage/mainpage.component.html
@@ -55,7 +55,7 @@
 
 <div class="row d-flex justify-content-center" *ngIf="comprobarEnfermedades()===false && this.buscado===true">
     <div class="card mb-12 border-0">
-        <h3 style="color: red;">No hay ninguna enfermedad relacionado con tu síntoma. Prueba otro</h3>
+        <h3 style="color: red;">No hay ninguna enfermedad relacionada con tu síntoma. Prueba otro.</h3>
     </div>
 </div>
 
