boton atras registro

--- a/frontend/src/app/auth/register/register.component.html
+++ b/frontend/src/app/auth/register/register.component.html
@@ -2,6 +2,7 @@
 <!-- Form -->
 <div class="row justify-content-center shadow p-3 mb-5 bg-white rounded" style="font-family: 'Poppins', sans-serif;">
     <div class="card col-12" id="caja-registro2">
+        <a routerLink="/login" style="color: #93af56; margin-left: 1rem;"><i class="fa fa-arrow-left fa-lg"></i></a>
         <div class="card-body">
             <div class="row">
                 <div class="col-md-12 col-sm-12">
